# EdgeEar

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  debug.py  serve.sh
.state/: changelog.json  components.json  deployment-state.json  diagrams.json  features.json  glossary.json  (+3 more)
code/: pyproject.toml  requirements.txt  setup.sh
code/ml/sei/: collect.py  compile_hef.py  evaluate.py  export_onnx.py  train.py
code/ml/signal_classifier/: compile_hef.py  dataset.py  evaluate.py  export_onnx.py  train.py
code/ravensdr/: __init__.py  ais_receiver.py  app.py  apt_decoder.py  apt_scheduler.py  audio_router.py  config.py  input_source.py  iq_capture.py  iq_segmenter.py  mel.py  meteor_analyzer.py  meteor_detector.py  presets.py  sei_model.py  signal_classifier.py  stream_source.py  transcriber.py  tuner.py  wefax_receiver.py  wefax_scheduler.py
code/ravensdr/data/: meteor_showers.json
code/scripts/: cleanup.sh  download_models.sh  start.sh  stop.sh
code/static/: classifier.css  classifier.js  map.css  map.js  meteor.css  meteor.js  ravensdr.css  ravensdr.js  satellite.css  satellite.js  sei.css  sei.js  wefax.css  wefax.js
code/templates/: index.html
code/tests/integration/: test_apt_pipeline.py  test_classifier_pipeline.py  test_meteor_pipeline.py  test_sei_pipeline.py  test_wefax_pipeline.py
code/tests/unit/: test_apt_decoder.py  test_apt_scheduler.py  test_iq_capture.py  test_iq_segmenter.py  test_meteor_analyzer.py  test_meteor_detector.py  test_sei_model.py  test_signal_classifier.py  test_wefax_receiver.py  test_wefax_scheduler.py
(+49 files in other folders)
