[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ravensdr"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.6",
    "numpy>=1.26.0",
    "faster-whisper>=1.0.0",
    "eventlet>=0.35.0",
]

[tool.setuptools.packages.find]
include = ["ravensdr*"]
